Migrate Json Beans to separate In and Out.